# XIFtyCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: basic_usage.cpp  gallery_ingest.cpp
include/xifty_cpp/: xifty.hpp
src/: xifty.cpp
tests/: test_xifty.cpp
